# commit-analysis

./: Cargo.toml  LICENSE
benches/: my_benchmarks.rs
src/: commit_changes.rs  lib.rs  main.rs  stats.rs
tests/: tests.rs
