[package]
name = "commit-analysis"
version = "0.1.0"
authors = ["Kevin Jackson <kevin.jackson@thehutgroup.com>"]
edition = "2018"

[dependencies]
git2 = "0.11.0"
docopt = "1.1.0"
regex = "1"
rayon = "1.0"
lazy_static = "1.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
criterion = "0.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bench]]
name = "my_benchmarks"
harness = false